refactor(upload-api): 重构 Java 上传服务并更新项目配置